# SBOM-TM

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
data/sboms/: sample_app.json  sample_context.json
rules/: base_rules.json  dynamic_rules.json  static_rules.json
src/: main.py
src/sbom_tm/: __init__.py  api.py  cli.py  config.py  context_generator.py  context_loader.py  models.py  report_builder.py  rule_engine.py  sbom_loader.py  scorer.py  service.py  storage.py  threatintel_enricher.py  trivy_client.py
templates/: report.html.j2
tests/: test_context_generator.py  test_rule_evaluator.py  test_scorer.py
